After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779374 - Unprovoked key repeat in gnome-terminal after in 3.22.9
Unprovoked key repeat in gnome-terminal after in 3.22.9
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-02-28 17:37 UTC by Yanko Kaneti
Modified: 2017-03-01 15:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH RFC] wayland: make sure to clear up the number of keys (1.23 KB, patch)
2017-02-28 17:41 UTC, Olivier Fourdan
committed Details | Review

Description Yanko Kaneti 2017-02-28 17:37:32 UTC
After updating gtk3 to gtk3-3.22.9-1.fc26.x86_64.rpm gnome-terminal tends ro randomly get in a key repeat state following some key combination involving creating a new terminal window (like C-shift-n, or a global shell shortcut starting a new terminal). Not really reproducible 99% of the time.
Comment 1 Olivier Fourdan 2017-02-28 17:39:38 UTC
I suspect a race condition with the compositor, as this is triggered when a key combo opens a new window.
Comment 2 Olivier Fourdan 2017-02-28 17:41:14 UTC
Created attachment 346921 [details] [review]
[PATCH RFC] wayland: make sure to clear up the number of keys

Can you try to reproduce with the attached patch?

--

Make sure to clear up the number of keys being pressed on enter/leave so
that we don't end up with leftovers if a new window is mapped by a
keyboard shortcut.
Comment 3 Yanko Kaneti 2017-03-01 11:18:19 UTC
I've been running with attachment 346921 [details] [review] for the last few hours and it hasn't happened whereas before it happened in a matter of minutes. I'll consider it a success
Comment 4 Carlos Garnacho 2017-03-01 15:11:34 UTC
Comment on attachment 346921 [details] [review]
[PATCH RFC] wayland: make sure to clear up the number of keys

Looks obviously correct, since we won't get key release events on focus change. All leave event must indeed reset buttons/keys state.
Comment 5 Olivier Fourdan 2017-03-01 15:14:00 UTC
Comment on attachment 346921 [details] [review]
[PATCH RFC] wayland: make sure to clear up the number of keys

attachment 346921 [details] [review] pushed to git master as commit bbf7c6a - wayland: make sure to clear up the number of keys

attachment 346921 [details] [review] pushed to branch gtk-3-22 as commit aebe3a7 - wayland: make sure to clear up the number of keys